--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 <!-- HERO TEASER -->
 <section class="hero teaser"><div class="container is-max-desktop"><div class="hero-body">
   <div class="twentytwenty-container" id="ff3d-compare">
-    <img src="./static/images/semanticBlueCat.BMP" alt="Semantic view">
-    <img src="./static/images/instanceBlueCat.BMP" alt="Instance view">
+    <img src="./static/images/semanticBlueCat.bmp" alt="Semantic view">
+    <img src="./static/images/instanceBlueCat.bmp" alt="Instance view">
   </div>
   <h2 class="subtitle has-text-centered mt-5"><span class="dnerf">ForestFormer3D achieves new state‑of‑the‑art individual tree segmentation and scene‑level semantic segmentation in complex forests</span></h2>
 </div></div></section>
