--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- TwentyTwenty css -->
   <link rel="stylesheet" href="./static/css/twentytwenty.css"/>
 
-  <link rel="icon" href="./static/images/favicon.svg">
+  <link rel="icon" href="./static/images/smartforest4_0_logo.jfif">
 
   <!-- =========== JS =========== -->
   <!-- jQuery FIRST -->
